--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Video Game Timeline</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
@@ -68,9 +71,8 @@
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
 
                                 <div style="width: 400px; height: auto;">
-                                    <p>The Magnavox Odyssey was the first commercial home video game console and relied entirely on analog circuitry rather than a programmable processor. <br>
-                                    <br>
-                                    <p>Its games were implemented through hardware configurations and physical screen overlays, with no built-in scoring or sound. </p>
+                                    <p>The Magnavox Odyssey was the first commercial home video game console and relied entirely on analog circuitry rather than a programmable processor.</p>
+                                    <p>Its games were implemented through hardware configurations and physical screen overlays, with no built-in scoring or sound.</p>
                                 </div>
 
                                 <div>
@@ -90,13 +92,10 @@
                             <h2 style="margin-bottom: 30px; margin-top: 20px; margin-left: 5%;">Atari</h2>
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
                                 <div style="width: 400px; height: 225px; object-fit: cover;">
-                                <div style="width: 400px; height: 225px; object-fit: cover;">
-                                    First-generation arcade games, such as Pong, introduced video games to the public with simple rules and accessible gameplay.<br>
-                                    <br>
-                                    The second-generation console Atari 2600 brought gaming into homes, popularizing cartridge-based systems and expanding the game market.<br>
+                                    <p>First-generation arcade games, such as Pong, introduced video games to the public with simple rules and accessible gameplay.</p>
+                                    <p>The second-generation console Atari 2600 brought gaming into homes, popularizing cartridge-based systems and expanding the game market.</p>
                                 </div>
 
-                                </div>
                                 <div>
                                     <img style="width: 400px; height: 225px; object-fit: cover;" class="round-image" src="https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png" alt="Magnavox Odyssey">
                                 </div>
@@ -197,13 +196,13 @@
                             <h2 style="margin-bottom: 30px; margin-top: 20px; margin-left: 5%;">SNES(aka Super Femi-com)</h2>
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
 
-                                <div style="width: 400px; height: 225px; object-fit: cover;">
+                                <p style="width: 400px; height: 225px; object-fit: cover;">
                                     SNES(Super Nintendo Entertainment System) Released in the early 1990s, the Super Famicom became one of the most iconic consoles of the 4th generation. <br>
                                     <br>
                                     With advanced colors and high-quality sound than Family Controller, a wide range of memorable games such as Super Mario World and early Final Fantasy series.<br></bbr>
                                     <br>
                                     The console helped define home gaming as a family-friendly and long-lasting entertainment medium.
-                                </div>
+                                </p>
 
                                 <div>
                                     <img style="width: 400px; height: 225px; object-fit: cover;" class="round-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Nintendo-Super-Famicom-Set-FL.jpg/2560px-Nintendo-Super-Famicom-Set-FL.jpg" alt="Magnavox Odyssey">
@@ -222,13 +221,13 @@
                             <h2 style="margin-bottom: 30px; margin-top: 20px; margin-left: 5%;">Sega Genesis</h2>
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
                                 <div style="width: 400px; height: 225px; object-fit: cover;">
-                                <div style="width: 400px; height: 225px; object-fit: cover;">
+                                <p style="width: 400px; height: 225px; object-fit: cover;">
                                     Sega Genesis released in 1988 which was a major 4th generation console that focused on fast gameplay and arcade-style action. <br>
                                     <br>
                                     Powered by a higher-clocked CPU, it delivered arcade-style gameplay and smoother action in many titles, including Sonic the Hedgehog.<br>
                                     <br>
                                     Its aggressive marketing and emphasis on speed made it a key player in the famous “console wars” of the era.
-                                </div>
+                                </p>
 
                                 </div>
                                 <div>
