updated few mistakes

--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
                             <h2 style="margin-bottom: 30px; margin-top: 20px; margin-left: 5%;">PlayStation</h2>
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
 
-                                <div style="width: 400px; height: 225px; object-fit: cover;">
+                                <p style="width: 400px; height: 225px; object-fit: cover;">
                                     PlayStation was released in 1994 and marked Sony’s entry into the video game console market. <br>
                                     <br>
                                     By adopting CD-ROM technology, it enabled larger, more complex 3D games and attracted many third-party developers.<br>
                                     <br>
                                     Its strong software support and focus on 3D gaming helped redefine the industry and establish Sony as a major player.
-                                </div>
+                                </p>
 
                                 <div>
                                     <img style="width: 400px; height: auto;" class="round-image" src="https://upload.wikimedia.org/wikipedia/en/9/9e/PlayStation-SCPH-1000-with-Controller.png" alt="PlayStation">
@@ -298,13 +298,13 @@
                             <h2 style="margin-bottom: 30px; margin-top: 20px; margin-left: 5%;">Nintendo64</h2>
                             <div style="display: flex; flex-direction: row; gap: 100px; justify-content: center;">
                                 <div style="width: 400px; height: auto;">
-                                    <div style="width: 400px; height: auto;">
+                                    <p style="width: 400px; height: auto;">
                                         Nintendo 64 was released in 1996, following the success of the PlayStation and further advancing 3D console gaming.<br>
                                         <br>
                                         It introduced groundbreaking 3D gameplay experiences with titles like Super Mario 64, setting new standards for camera control and level design.<br>
                                         <br>
                                         Although it relied on cartridges instead of CDs, the Nintendo 64 demonstrated Nintendo’s unique approach to 3D gaming and innovation.
-                                    </div>
+                                    </p>
 
                                 </div>
                                 <div>
